src/index.css
:root,
:root.light-mood {
    --light-color: #eeefe2;
    --main-color: #eeefe2;
    --main-font-color: #211c2a;
    --yellow-color: #ffaa15;
    --red-color: #b5252f;

    --green-color: #707c5e;
    --transparent-green-color: rgba(112, 124, 94, 0.1);
    --transparent-blue-color: rgba(44, 36, 59, 0.3);
    --transparent-light-color: rgba(238, 239, 226, 0.4);

    --backdrop-color: rgba(0, 0, 0, 0.4);

    --shadow-sm: 0 1px 2px rgba(44, 36, 59, 0.04);
    --shadow-md: 0px 0.6rem 2.4rem rgba(44, 36, 59, 0.1);
    --shadow-lg: 0 0 2rem 1px rgba(44, 36, 59, 0.2);

    --transition-duration: 0.3s;
    --border-sm: 2px;
    --border-md: 3px;
}

:root.dark-mood {
    --main-color: #211c2a;
    --main-font-color: #eeefe2;

    --shadow-sm: 0 1px 2px rgba(238, 239, 226, 0.4);
    --shadow-md: 0px 0.6rem 1rem rgba(238, 239, 226, 0.08);
    --shadow-lg: 0 2.4rem 3.2rem rgba(238, 239, 226, 0.1);
    --transparent-blue-color: rgba(238, 239, 226, 0.2);
}

html {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

@media (max-width: 992px) {
    html {
        font-size: 85%;
    }
}

@media (prefers-reduced-motion: reduce) {
    html {
        scroll-behavior: auto;
    }
}

body {
    width: 100vw;
    height: 100%;
    font-family: "Lexend", serif;
    position: relative;

    background-color: var(--main-color);
    overflow-x: hidden;
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

button {
    background-color: inherit;
    color: inherit;
    border: 0;
    outline: 0;
    cursor: pointer;
}

a {
    display: inline-block;
    text-decoration: none;
    color: inherit;
    cursor: pointer;
}

li {
    list-style: none;
}

h1 {
    font-size: 2.4rem;
    font-weight: 400;
}

h2 {
    font-size: 1.6rem;
    font-weight: 400;
}

h2 span {
    color: var(--yellow-color);
}

h3 {
    font-size: 1.3rem;
    font-weight: 400;
}

p {
    font-weight: 300;
    font-size: 1.1rem;
    line-height: 1.4;
}

@media (max-width: 768px) {
    h1 {
        font-size: 1.8rem;
    }
    h2 {
        font-size: 1.4rem;
    }
    h3 {
        font-size: 1.2;
    }
}

